# ophir-ml-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  best-practices.md  devcontainer.json
.devcontainer/features/: README.md
.devcontainer/features/claude-code/: devcontainer-feature.json  install.sh
.devcontainer/features/ollama/: devcontainer-feature.json  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: eval.yaml  inference.yaml  train.yaml
docs/: CONTRIBUTING.md  modules.md
models/: __init__.py  resnet.py
ophir_ml_project/: __init__.py
src/train/: __init__.py  training_loop.py  training_utils.py
src/utils/: __init__.py  data_loading.py  experiment_tracking.py  metrics.py  seeds.py  training.py
tests/: README.md
