[project]
name = "ophir-ml-project"
version = "0.1.0"
description = "Machine learning project using PyTorch best practices"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "pandas>=2.0",
    "omegaconf>=2.3",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    # Development dependencies for uv sync
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
# Optional dependencies for extended functionality
dev = [
    # Development and testing tools
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.6",  # Updated to 0.6+ for better rules
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "models"]

# Ruff configuration - line length, target Python version
[tool.ruff]
line-length = 100
target-version = "py39"

# Ruff linting rules configuration
[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I", "B", "C4", "COM", "DTZ", "T10", "EXE"]
ignore = [
    # Black-compatible formatting rules (B) - use Black for formatting instead
    "B",
    # Common false positives for ML projects
    "COM812",  # Trailing comma missing (Black handles this)
]

# Per-file ignores for flexibility
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

# Ruff isort configuration (compatible with Black)
[tool.ruff.lint.isort]
known-first-party = ["ophir_ml_project", "src", "models"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

# McCabe complexity configuration
[tool.ruff.lint.mccabe]
max-complexity = 10

# Black configuration (used by pre-commit and for formatting)
[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.tox
    | build
    | dist
    | migrations
    | __pycache__
    | \.claude  # IDE/project tools directory
)/
'''

# MyPy configuration for type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
exclude = ["tests/", "notebooks/", "models/"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if sys.platform.",
    "@overload",
]
